<resources>
    <string name="app_name">study_01</string>

    <string name="hello">hello World</string>

    <string name="login_title">여행기</string>
    <string name="login_title_second">열심히 일 한 당신 떠나요!</string>

    <string name="login">로그인</string>
    <string name="signUP">회원 가입</string>
    <string name="login_setting">본 서비스는 여행기의 내용을 회원끼리<br />"\n"
        공유하는 서비스입니다. </string>
    <string name="password">Password</string>
    <string name="UserID">UserID</string>
    <string name="pw_search">비밀번호 찾기</string>
    <string name="btn_ok">확인</string>
    <string name="login_searchtitle">비밀번호 찾기</string>
    <string name="search_hit">아이디를 입력해주세요</string>
    <string name="passwordconfirm">passwordConfirm</string>
    <string name="signup_title">회원가입</string>
    <string name="nav_home">nav_home</string>
    <string name="nav_todo">nav_todo</string>
    <string name="nav_map">nav_map</string>
    <string name="nav_message">nav_message</string>
    <string name="nav_setting">nav_setting</string>
    <string name="auto_login">자동 로그인</string>
    <string name="home">Home</string>
    <string name="todo">Todo</string>
    <string name="Map">Map</string>
    <string name="Message">Message</string>
    <string name="setting">Setting</string>
    <string name="new_item">최신순</string>
    <string name="old_item">과거순</string>
    <string name="audio_top_text">오디오 파일이 있습니다.</string>
    <string name="phNum">전화번호</string>
    <string name="oneText">한줄설명</string>
    <string name="detail_textview_ex">상세설명</string>
</resources>