<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/nav_home"
    android:title="@string/nav_home"
    android:icon="@drawable/ic_baseline_home_24"
    />

    <item
        android:id="@+id/nav_todo"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/nav_todo"
        />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_add_location_24"
        android:title="@string/nav_map"/>

    <item
        android:id="@+id/nav_message"
        android:title="@string/nav_message"
        android:icon="@drawable/ic_baseline_message_24"
        />

    <item
        android:id="@+id/nav_setting"
        android:title="@string/nav_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        />


</menu>