<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    tools:context=".login.SignUpActivity">


    <ImageView
        android:id="@+id/sign_back"
        android:layout_width="40dp"

        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_back_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/signup_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/sign_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/UserID"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/sign_pw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />


    <EditText
        android:id="@+id/sign_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/sign_pw_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />


    <EditText
        android:id="@+id/sign_pw_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:hint="@string/passwordconfirm"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_create_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_round"
        android:text="@string/btn_ok"
        android:textColor="@color/login_bg"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_pw_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>