<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    tools:context=".login.PwSearchActivity">

    <ImageView
        android:id="@+id/login_back"
        android:layout_width="40dp"

        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_back_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_searchtitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/red"
        android:hint="@string/UserID"
        android:textColorHint="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/search_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_title"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/search_hit"
        app:layout_constraintLeft_toLeftOf="@id/login_userid"
        app:layout_constraintTop_toBottomOf="@id/login_userid"
        android:textColor="@color/red"
        android:layout_marginTop="4dp"
        android:text="@string/search_hit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_round"
        android:text="@string/btn_ok"
        android:textColor="@color/login_bg"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>